* Updated formating of SearchUtils. * Catching and displaying ExceptionInInitializerError in AppService. * Pointing to "http://lexevsapi.nci.nih.gov/lexevsapi42" in RemoteServerUtil2.
SVN-Revision: 95

--- a/software/test/performance/.classpath
+++ b/software/test/performance/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/spring.jar"/>
 	<classpathentry kind="lib" path="lib/umlslicense.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="lib/mm.mysql-2.0.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
