--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,5 +44,10 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
+
+    <session-config>
+      <session-timeout>30</session-timeout> 
+    </session-config>
+
     
 </web-app>
