Set application session to 1 hour.
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncit/trunk/software@580 0604bb77-1110-461e-859e-28c50bf9b280

--- a/ncitbrowser/web/WEB-INF/web.xml
+++ b/ncitbrowser/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
   "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
 
+    <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
         <param-value>server</param-value>
