Cleanup BDA build scripts and restore ‘@name@’ substitution variables to LexEVS xml configuration files
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncit/trunk/software@1181 0604bb77-1110-461e-859e-28c50bf9b280

--- a/ncitbrowser/build.xml
+++ b/ncitbrowser/build.xml
@@ -74,7 +74,7 @@
         </copy>
         <copy todir="${webapp.classes.dir}" flatten="true" includeEmptyDirs="no" filtering="true">
             <filterset>
-                <filter token="lex.evs.api.default.url" value="${lex.evs.api.default.url}"/>
+                <filter token="lex.evs.api.url" value="${lex.evs.api.url}"/>
             </filterset>
             <resources>
                 <file file="${conf.dir}/application-config-client.xml"/>
