--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path="software/ncitbrowser/src/java"/>
 	<classpathentry kind="src" path="software/ncitbrowser/web/pages"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/asm.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/axis.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/c3p0-0.9.0.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/caGrid-CQL-cql.1.0-1.2.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/castor-1.0.2.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/castor-1.2-xml.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/castor-1.2.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/castor-bean-serializer.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/common-util-1.0.4.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/commons-cli-1.0.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/commons-collections-3.2.jar"/>
@@ -26,11 +29,13 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jdom.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jsf-api.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jsf-impl.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/json-20080701.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jta.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexbig.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-beans.jar"/>
-	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-framework.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-client.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/LexEVSSecurity.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lucene-core-2.4.0.jar"/>
@@ -46,7 +51,7 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/sdk-security.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/spring.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/sqlbuilder-2.0.6.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/xercesImpl.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="software/ncitbrowser/build/web/WEB-INF/classes"/>
 </classpath>
