--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="software/ncitbrowser/src/java"/>
 	<classpathentry kind="src" path="software/ncitbrowser/web/pages"/>
+	<classpathentry kind="src" path="software/test/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/antlr-2.7.6.jar"/>
@@ -33,7 +34,7 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jta.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexbig.jar"/>
-	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-1.0.2.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-beans.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-client.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/LexEVSSecurity.jar"/>
