--- a/software/ncitbrowser/build.xml
+++ b/software/ncitbrowser/build.xml
@@ -17,6 +17,7 @@
     <property name="src.dir" value="${basedir}/src" />
     <property name="conf.dir" value="${basedir}/conf" />
     <property name="lib.dir" value="${basedir}/lib" />
+    <property name="extlib.dir" value="${basedir}/extlib" />	
     <property name="target.dir" value="${basedir}/target" />
     <property name="webapp.dir" value="${basedir}/web" />
     <property name="webapp.build.dir" value="${basedir}/build/web" />
@@ -30,7 +31,10 @@
         <fileset dir="${lib.dir}">
             <include name="*.jar" />
         </fileset>
-        <pathelement path ="${webapp.classes.dir}"/>
+        <fileset dir="${extlib.dir}">
+            <include name="*.jar" />
+        </fileset>
+    	<pathelement path ="${webapp.classes.dir}"/>
     </path>
 
     <target name="build:all" depends="-pre-clean, -init, -war, post-clean" description="Default target" />
