--- a/software/ncitbrowser/web/WEB-INF/web.xml
+++ b/software/ncitbrowser/web/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
-<!DOCTYPE web-app PUBLIC
-  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-  "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
+<web-app version="2.5"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
     <session-config>
         <session-timeout>120</session-timeout>
@@ -35,7 +35,7 @@
 
     <!-- Faces Servlet -->
 
-    <servlet>
+    <!-- servlet>
          <servlet-name>Faces Servlet</servlet-name>
          <servlet-class>gov.nih.nci.evs.browser.servlet.AFacesServlet</servlet-class>
          <init-param>
@@ -43,12 +43,18 @@
            <param-value>/pages/error_handler.jsf</param-value>
          </init-param>
          <load-on-startup>-1</load-on-startup>
+    </servlet -->
+
+    <servlet>
+        <servlet-name>FacesServlet</servlet-name>
+        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <!-- Faces Servlet Mapping -->
 
     <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
+        <servlet-name>FacesServlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
 
