--- a/.classpath
+++ b/.classpath
@@ -33,7 +33,7 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/jta.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexbig.jar"/>
-	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-1.0.1.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-beans.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi51-client.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/LexEVSSecurity.jar"/>
