--- a/.classpath
+++ b/.classpath
@@ -73,7 +73,6 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexbig.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-client-framework.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-core.jar"/>
-	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-2.0.0.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi60-orm.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/LexEVSSecurity.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/log4j-1.2.15.jar"/>
@@ -131,5 +130,7 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/extlib/jsf-api.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/extlib/jsf-impl.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/extlib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-2.0.1.jar"/>
+	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi60-beans.jar"/>
 	<classpathentry kind="output" path="software/ncitbrowser/build/web/WEB-INF/classes"/>
 </classpath>
