--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="software/ncitbrowser/src/java"/>
-	<classpathentry kind="src" path="software/ncitbrowser/web/pages"/>
 	<classpathentry kind="src" path="software/test/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/args4j-2.0.12.jar"/>
@@ -132,5 +130,6 @@
 	<classpathentry kind="lib" path="software/ncitbrowser/extlib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevs-tree-2.0.1.jar"/>
 	<classpathentry kind="lib" path="software/ncitbrowser/lib/lexevsapi60-beans.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="software/ncitbrowser/build/web/WEB-INF/classes"/>
 </classpath>
