--- a/software/ncitbrowser/build.xml
+++ b/software/ncitbrowser/build.xml
@@ -17,13 +17,15 @@
     <property name="src.dir" value="${basedir}/src" />
     <property name="conf.dir" value="${basedir}/conf" />
     <property name="lib.dir" value="${basedir}/lib" />
-    <property name="extlib.dir" value="${basedir}/extlib" />   
+    <property name="extlib.dir" value="${basedir}/extlib" />
     <property name="target.dir" value="${basedir}/target" />
     <property name="webapp.dir" value="${basedir}/web" />
     <property name="webapp.build.dir" value="${basedir}/build/web" />
     <property name="webapp.classes.dir" value="${webapp.build.dir}/WEB-INF/classes" />
     <property name="webapp.dist.dir" value="${basedir}/dist" />
     <property name="ncitbrowser-webapp.prop.file" value="NCItBrowserProperties.xml" />
+    <property name="local.properties.loc" location="../build/local.properties"/>
+    <property name="project.properties.loc" location="../build/project.properties"/>
 
     <!-- Build class path -->
 
@@ -33,7 +35,7 @@
         </fileset>
         <fileset dir="${extlib.dir}">
             <include name="*.jar" />
-        </fileset>        
+        </fileset>
         <pathelement path ="${webapp.classes.dir}"/>
     </path>
 
@@ -52,13 +54,12 @@
     <!-- This sets up all of the neccessary directories -->
 
     <target name="-init" depends="-pre-clean">
-
+        <property file="${local.properties.loc}"/>
+        <property file="${project.properties.loc}"/>
         <mkdir dir="${webapp.classes.dir}" />
-
     </target>
 
     <target name="compile:application-code" depends="-init" description="Compiles all subproject code">
-
         <javac srcdir="${src.dir}" destdir="${webapp.classes.dir}" debug="true">
             <classpath refid="project.compile.classpath" />
         </javac>
@@ -69,7 +70,11 @@
                 </patternset>
             </fileset>
         </copy>
-        <copy todir="${webapp.classes.dir}" includeEmptyDirs="no">
+        <copy todir="${webapp.classes.dir}" flatten="true" includeEmptyDirs="no" filtering="true">
+            <filterset>
+                <filter token="log.package" value="${log.package}"/>
+                <filter token="log.level" value="${log.level}"/>
+            </filterset>
             <fileset dir="${conf.dir}">
                 <patternset>
                     <include name="**/log4j.*"/>
